<resources>
    <string name="app_name">TxTLauncher_alt</string>
    <string name="title_home">Home</string>
    <string name="title_tools">Tools</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_allapps">All apps</string>
    <string name="started">Started</string>
    <string name="dark_mode">dark mode</string>
    <string name="light_mode">light mode</string>
    <string name="button_next">Next</string>
    <string name="news_update">New: # - new function</string>
    <string name="news_update_title">Updated</string>
    <string name="news_firstrun">- prepare # - config</string>
    <string name="news_firstrun_title">New app iunstalled</string>
    <string name="error_startapp">Error starting app</string>
    <string name="service_disable">Service disabled</string>
    <string name="title_settings">Settings</string>
    <string name="started_activity">Starting activity</string>
    <string name="starting_other_app">Staring app</string>
    <string name="setting_addapp">Add app to homescreen</string>
    <string name="settings_addfavapp">Add app to favorites</string>
    <string name="setting_sysicon">Show system ikons</string>
    <string name="setting_starticon">Show app icons</string>
    <string name="settings_title_privateai">Private AI URL</string>
    <string name="settings_title_searchurl">Internet search URL</string>
    <string name="settings_title_background_image">Background image file name (download folder)</string>
    <string name="settings_weather_html1">Weather app URL (cití naóname: @CITY@)</string>
    <string name="button_reset">Reset to default</string>
    <string name="settings_read_applist">App list re-read when changed it</string>
    <string name="help_title">Help</string>
    <string name="title_favorite_addapp">Select favorite apps</string>
    <string name="title_home_addapp">Add app to home screen</string>
    <string name="favorite_apps">Favorite apps</string>
    <string name="button_help">Help</string>
    <string name="button_settings">System settings</string>
    <string name="button_search">Settings</string>
    <string name="button_dial">Dial</string>
    <string name="button_mail">Mail</string>
    <string name="button_applist">App list</string>
    <string name="button_browser">Browser</string>
    <string name="button_camera">Camera</string>
    <string name="error_bitmap">Error in background image</string>
    <string name="background_file_not_found">Background image file not found</string>
    <string name="button_close_help">Ok</string>
    <string name="help_text_1">Home scree: # - up swipe: app list # - down swipe: favorite apps # - double click: lock device # - right, left swipe: discover</string>
    <string name="help_text_2">Settings: # - select app to home screen # - select apps to favorites # - show icons to system apps # - show icons to home screen apps</string>
    <string name="help_text_3">- private AI link # - internet search link # - background image file name in download directory # - weather link (@CITY@ = city)</string>
    <string name="licence">GPLv3</string>
    <string name="note_title">Note</string>
    <string name="widgat_map">Go to map</string>
    <string name="start_ai">Start privat AI</string>
    <string name="help_text_4">\"Made for me.\"</string>
</resources>