<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wswdteam.txtlauncher_alt.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.wswdteam.txtlauncher_alt.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.wswdteam.txtlauncher_alt.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.wswdteam.txtlauncher_alt.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_allapps"
        android:name="com.wswdteam.txtlauncher_alt.ui.allapps.AllappsFragment"
        android:label="@string/title_allapps"
        tools:layout="@layout/fragment_allapps" />

</navigation>