<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text=""
        android:visibility="invisible"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/digitalClock"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/digitalDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/digitalClock"
        app:layout_constraintTop_toBottomOf="@id/digitalClock" />



    <ImageView
        android:id="@+id/helpButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="22dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help" />

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="64dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />

    <LinearLayout
        android:id="@+id/AppFrame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="75dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toTopOf="@id/buttonsFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/digitalDate">

        <ListView
            android:id="@+id/homeAppList1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|clip_horizontal|start|fill_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layoutDirection="locale" />

        <ListView
            android:id="@+id/homeAppList2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|clip_horizontal|fill_horizontal|end"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="0dp">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/dialButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_dial"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/call" />

        <ImageView
            android:id="@+id/mailButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/dialButton"
            app:srcCompat="@drawable/email" />

        <ImageView
            android:id="@+id/applistButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="56dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_applist"
            app:srcCompat="@drawable/menu" />

        <ImageView
            android:id="@+id/browserButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_browser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cameraButton"
            app:srcCompat="@drawable/internet" />

        <ImageView
            android:id="@+id/cameraButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/camera" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>